crates/eventric-domain/tests/ui/action_non_constructor.rs
use eventric_domain::action::Action;

#[derive(Action)]
#[action(projections: { p: some_fn() })]
struct Bar;

fn main() {}
